testsuite/negative/Issue-1013.n
class X
{
 | A // E: variant option can appear only in variant type declaration
}
